--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiệu ứng trái tim bay và avatar xuất hiện</title>
+    <title>Anh yêu em</title>
     <link rel="stylesheet" href="style.css">  <!-- Kết nối file CSS -->
 </head>
 <body>
